ErrorDispose/src/main/java/com/example/error/demo/MyException.java
package com.example.error.demo;

public class MyException extends Exception {
    MyException(String msg) {
        super(msg);
    }
}
